--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version-file: 'path/to/go.mod'
+        go-version-file: 'go.mod'
     - run: go version
     
     - name: Install dependencies
